# FerroS3

./: .gitignore  .mailmap  Cargo.toml  Dockerfile  Dockerfile.freebsd11  Makefile  README.md  build-freebsd11.sh  build.rs  legacy-freebsd-build-osx.md
.github/workflows/: ci.yml  release.yml
src/: blocking_http.rs  cache.rs  config.rs  error.rs  freebsd11_shim.c  lib.rs  main.rs  state.rs
src/auth/: mod.rs  sigv4.rs
src/handlers/: admin.rs  bucket.rs  list.rs  mod.rs  object.rs
tests/: filesystem_operations.rs
