[package]
name = "ferros3"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A high-performance, minimalist S3-compatible proxy written in Rust."

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
quick-xml = { version = "0.36", features = ["serialize"] }
bytes = "1.0"
http = "1.0"
tower-http = { version = "0.5", features = ["full"] }
walkdir = "2.3"
mime_guess = "2.0"
urlencoding = "2.1"
dashmap = "6.0" # Thread-safe cache
tokio-util = { version = "0.7.18", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
hex = "0.4"

[build-dependencies]
cc = "1.0"
